feat: add nav buttons

--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
                 <h4>Minsk,Belarus</h4>
             </div>
         </div>
+        <div>
+        <ul>
+            <li><button>Проекты</button></li>
+            <li><button>Мемчики</button></li>
+            <li><button>Натыкать</button></li>
+        </ul>
+        </div>
     </body>
 </html>
