--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </div>
         <div>
         <ul>
+            <h2>Панель</h2>
             <li><button>Проекты</button></li>
             <li><button>Мемчики</button></li>
             <li><button>Натыкать</button></li>
